# invenio-assets

./: .editorconfig  .git-blame-ignore-revs  .gitignore  .kwalitee.yml  .travis.yml  AUTHORS.rst  CHANGES.rst  CONTRIBUTING.rst  INSTALL.rst  LICENSE  MANIFEST.in  README.rst  RELEASE-NOTES.rst  pyproject.toml  pytest.ini  requirements-devel.txt  run-tests.sh  setup.cfg  setup.py
.github/workflows/: tests.yml
docs/: Makefile  api.rst  conf.py  configuration.rst  index.rst  make.bat  upgrade.rst  usage.rst
invenio_assets/: __init__.py  bower.py  cli.py  collect.py  ext.py  filters.py  glob.py  npm.py  proxies.py  proxy.py  version.py  webpack.py
invenio_assets/assets/: .babelrc  .eslintrc.js  package.json  pnpm-workspace.yaml  rspack-package.json
invenio_assets/assets/patches/: admin-lte+3.2.0.patch  semantic-ui-less+2.5.0.patch  watchpack+1.6.0.patch  watchpack+1.7.4.patch
tests/: conftest.py  test_bower.py  test_glob.py  test_invenio_assets.py  test_invenio_assets_cli.py  test_invenio_assets_filters.py  test_npm.py  test_webpack.py
