# SPDX-FileCopyrightText: 2015-2020 CERN.
# SPDX-FileCopyrightText: 2021-2026 TU Wien.
# SPDX-FileCopyrightText: 2022-2024 Graz University of Technology.
# SPDX-License-Identifier: MIT

[project]
name = "invenio-assets"
description = "Media assets management for Invenio."
readme = "README.rst"
requires-python = ">=3.9"
license = "MIT"
authors = [
  { name = "CERN", email = "info@inveniosoftware.org" },
]
keywords = [
  "assets",
  "collect",
  "invenio",
  "npm",
]
classifiers = [
  "Development Status :: 5 - Production/Stable",
]
dependencies = [
  "flask-collect-invenio>=1.4.0,<2.0.0",
  "flask-webpackext>=2.1.0,<3.0.0",
  "invenio-base>=2.0.0,<3.0.0",
]
dynamic = ["version"]

[project.urls]
Repository = "https://github.com/inveniosoftware/invenio-assets"

[project.entry-points."flask.commands"]
collect = "invenio_assets.cli:collect"

[project.entry-points."invenio_base.apps"]
invenio_assets = "invenio_assets:InvenioAssets"

[project.optional-dependencies]
docs = []
tests = [
  "mock>=1.3.0",
  "pytest-black-ng>=0.4.0",
  "pytest-invenio>=3.0.0,<4.0.0",
  "sphinx>=4.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "invenio_assets/__init__.py"

[tool.hatch.build.targets.sdist]
include = [
  "/invenio_assets",
]

[tool.isort]
profile = "black"

[tool.pydocstyle]
add_ignore = "D401"

[tool.pytest.ini_options]
addopts = '--black --isort --pydocstyle --doctest-glob="*.rst" --doctest-modules --cov=invenio_assets --cov-report=term-missing'
testpaths = "tests invenio_assets"
live_server_scope = "module"
