# -*- coding: utf-8 -*-
#
# This file is part of Invenio.
# Copyright (C) 2015-2020 CERN.
# Copyright (C) 2022 Graz University of Technology.
#
# Invenio is free software; you can redistribute it and/or modify it
# under the terms of the MIT License; see LICENSE file for more details.

[metadata]
name = invenio-assets
version = attr: invenio_assets.__version__
description = "Media assets management for Invenio."
long_description = file: README.rst, CHANGES.rst
keywords = invenio assets npm collect
license = MIT
author = CERN
author_email = info@inveniosoftware.org
platforms = any
url = https://github.com/inveniosoftware/invenio-assets
classifiers =
    Development Status :: 5 - Production/Stable

[options]
include_package_data = True
packages = find:
python_requires = >=3.7
zip_safe = False
install_requires =
    Flask-Collect-Invenio>=1.4.0
    Flask-WebpackExt>=1.0.0
    invenio-base>=1.2.5
    node-semver>=0.1.1,<0.2.0

[options.extras_require]
tests =
    pytest-black>=0.3.0,<0.3.10
    pytest-invenio>=1.4.0
    mock>=1.3.0
    sphinx>=4.5
# Kept for backwards compatibility
docs =

[options.entry_points]
flask.commands =
    collect = invenio_assets.cli:collect
invenio_base.apps =
    invenio_assets = invenio_assets:InvenioAssets

[build_sphinx]
source-dir = docs/
build-dir = docs/_build
all_files = 1

[bdist_wheel]
universal = 1

[pydocstyle]
add_ignore = D401

[isort]
profile=black

[check-manifest]
ignore =
    *-requirements.txt

[tool:pytest]
addopts = --black --isort --pydocstyle --doctest-glob="*.rst" --doctest-modules --cov=invenio_assets --cov-report=term-missing
testpaths = tests invenio_assets
filterwarnings = ignore::pytest.PytestDeprecationWarning
